--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
   width: 880px;
   margin: 0 auto;
+  padding-bottom: 200px;
   /* text-align: center; */
 } 
 .header {
@@ -27,7 +28,7 @@ select {
   left: 0;
   right: 0;
   height: 130px;
-  width: 50%;
+  width: 650px;
   margin: 0 auto;
   border-radius: 25px;
   background: rgb(175, 205, 218);
@@ -36,12 +37,39 @@ select {
 .select {
   width: 120px;
   height: 120px;
+  margin: 10px;
   border: 1px solid black;
 }
 
+.create-button {
+  margin: 20px;
+  width: 120px;
+  height: 100px;
+  font-size: 25pt;
+}
+
 .closet {
-  height: 200px;
-  display: inline-block;
+  display:flex;
+  height: 220px;
   width: 100%;
   border: 1px solid black;
+  margin-bottom: 30px;
+}
+
+.closet .cloth {
+  text-align: center;
+  width: 200px;
+  margin: 10px;
+}
+
+.closet .cloth img {
+  width: 140px;
+  /* height: 150px; */
+}
+
+.closet .cloth h3 {
+  margin: 0;
+}
+.closet .cloth p {
+  margin: 0;
 }
